# quiver

./: .gitignore  .gitmodules  CITATION.cff  CNAME  LICENSE  Macros  Makefile  README.md  arrow.js  arrow.mjs  bezier.js  dom.js  dom.mjs  index.html  main.css  makefile  package.json  parser.js  parser.mjs  pnpm-lock.yaml  quiver.js  quiver.mjs  service-worker.js  tutorial.md  ui.js  ui.mjs  workbox-86637ee2.js
dev/: arrow.mjs  curve.mjs  index.html  ui.js
editors/emacs/: README.md  quiver-mode.el
package/: README.md  quiver-doc.tex  quiver.sty
service-worker/: build.js  package-lock.json  package.json
src/: .gitmodules  arrow.html  arrow.js  arrow.mjs  bezier.js  curve.js  dom.js  dom.mjs  ds.js  ds.mjs  embed.js  index.html  main.css  manifest.json  parser.js  parser.mjs  quiver-package.tex  quiver.js  quiver.mjs  quiver.sty  service-worker.js  ui.js  ui.mjs
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/tests/: arrow.html  parser.tex
tests/: arrow.html  parser.tex
